# python-compiler

./: README.md
A11/: CST8152_A11_Henry812.docx  CST8152_A11_Henry812Colin946.docx  ~$T8152_A11_Henry812Colin946.docx
A11_ReaderDocs/: A11_ReaderDocs.docx
A12/Mouse/: CMakeLists.txt  Compilers.c  Compilers.h  MainReader.c  READ ME.txt  Reader.c  Reader.h
A12/code/: CMakeLists.txt  Compilers.c  Compilers.h  MainReader.c  Reader.c  Reader.h
A12/input/: A12.bat  INPUT2_Volume.mse  INPUT3_Factorial.mse  INPUT4_Menu.mse  INPUT5_Big.mse
A12_Reader/Reader/: CMakeLists.txt  Compilers.c  Compilers.h  MainReader.c  Reader.c  Reader.h  launch.vs.json
A21/: A21-Task1.xlsx  CST8152_A21_Henry812Colin946.doc  ~$T8152_A21_Henry812Colin946.doc  ~WRL1364.tmp
A22/Mouse/: CMakeLists.txt  Compilers.c  MainScanner.c  READ ME.txt  Scanner.c  Scanner.h  launch.vs.json
A22_Lexer/Lexer/: CMakeLists.txt  Compilers.c  Compilers.h  MainReader.c  Reader.h  Scanner.c  Scanner.h  launch.vs.json
A31/: A31notes.txt  CST8152_A31_Henry812Colin946.doc  Template_A31_F23_YOURLANGUAGE.doc  ~$T8152_A31_Henry812Colin946.doc
A31_ParserDocs/: A31_ParserDocs.doc
A32/: A31.docx  ~$A31.docx
A32/Mouse/: CMakeLists.txt  Compilers.c  Compilers.h  MainParser.c  Parser.c  Parser.h  ParserCopy.c  READ ME.txt  Scanner.h  launch.vs.json
A32_Parser/Parser/: CMakeLists.txt  Compilers.c  Compilers.h  MainParser.c  MainScanner.c  Parser.c  Parser.h  READ ME.txt  Reader.c  Scanner.h  launch.vs.json
